--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
     <div class="header">
         <div class="tophead container-fluid text-end">
             <div class="container">
-                <a href="#">info@centresource.in</a>
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item">
+                        <a aria-current="page" href="#">Know Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">New Insights</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Chronicles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="active" href="#">Careers</a>
+                    </li>
+
+                </ul>
             </div>
         </div>
 
@@ -36,19 +53,82 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav justify-content-end">
                             <li class="nav-item">
-                                <a aria-current="page" href="#">Know Us</a>
+                                <div class="dropdown">
+                                    <button class="dropdwnbt" type="button" id="dropdownMenuButton1"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Enterprise Application <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Services</a>
+                                <div class="dropdown">
+                                    <button class="dropdwnbt" type="button" id="dropdownMenuButton2"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Application Development <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="nav-item">
-                                <a href="#">New Insights</a>
+                                <div class="dropdown">
+                                    <button class="dropdwnbt" type="button" id="dropdownMenuButton3"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Data Analytics Services <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Chronicles</a>
+                                <div class="dropdown">
+                                    <button class="dropdwnbt" type="button" id="dropdownMenuButton4"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Managed Services <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="nav-item">
-                                <a class="active" href="#">Careers</a>
+                                <div class="dropdown">
+                                    <button class="dropdwnbt" type="button" id="dropdownMenuButton5"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Testing <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <div class="dropdown">
+                                    <button class="dropdwnbt" type="button" id="dropdownMenuButton6"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        More <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
                             </li>
 
                         </ul>
@@ -257,7 +337,7 @@
 
     </section>
     <div class="space">
-        
+
     </div>
     <section>
         <div class="container">
@@ -376,10 +456,11 @@
     </section>
     <section>
         <div class="container-fluid p-0 childrens">
-            <img src="./img/childrens.jpeg" alt="">
+            <img src="./img/chilcolor.png" alt="">
             <div class="chilbotcontent container">
                 <h1 class="mb-2">Centresource is backing up ‘save a child’ project</h1>
-                <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor urna, blandit sed integer. Sed eget
+                <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor urna, blandit sed
+                    integer. Sed eget
                     nec sem diam fames augue enim sagittis. In lorem pharetra sed leo augue leo leo augue sapien. Vel
                     ultrices purus eget at orci dui erat platea. Condimentum non nec egestas gravida diam ut imperdiet
                     tortor. Diam diam, metus, at est urna tristique enim commodo. Arcu elit, nulla morbi sed at et
