--- a/Careers.html
+++ b/Careers.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <!-- Bootstrap CSS -->
     <!-- https://cdnjs.com/libraries/twitter-bootstrap/5.0.0-beta1 -->
-    
+
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -23,19 +23,19 @@
             <div class="container">
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
-                        <a aria-current="page" href="#">Know Us</a>
+                          <a aria-current="page" href="Knowus.html">Know Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Services</a>
+                        <a href="Services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">New Insights</a>
+                        <a href="insight.html">New Insights</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Chronicles</a>
+                        <a href="chronicles.html">Chronicles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="active" href="#">Careers</a>
+                        <a class="active" href="Careers.html">Careers</a>
                     </li>
 
                 </ul>
@@ -44,7 +44,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light navigation_bar">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./img/homelogo.png" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="./img/homelogo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -143,7 +143,7 @@
 
     </div>
     <section class="homegif">
-        <img src="./img/home.gif" alt="">
+        <img src="./img/career1.png" alt="">
         <h2>Careers</h2>
     </section>
 
@@ -166,9 +166,233 @@
                         is a one-stop solution for your various digital marketing & technology needs.</p>
                 </div>
             </div>
+            <div class="row mt-5">
+                <div class="col-md-12 contentsection text-center">
+                    <h1 class="mb-4">Employee Empowerment</h1>
+                    <p class="taj">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ornare eleifend enim lacinia
+                        viverra
+                        facilisi in duis. Nunc, odio sed ut vestibulum consectetur ornare dictum eget. Id dictum
+                        bibendum pretium, euismod feugiat aliquet congue eu. Quis sollicitudin luctus sed nulla egestas.
+                        Massa, aliquet at tellus, habitasse arcu. Ultrices sed eget platea aliquam varius. Faucibus
+                        congue malesuada tempor sagittis. Enim, ipsum imperdiet nec nec. Sagittis eget sit morbi ut diam
+                        neque. Facilisi integer dolor justo, aliquet. Integer aliquet tortor tellus semper id morbi orci
+                        sit tristique. Tincidunt nullam risus tortor pellentesque tristique ac.
+                        Adipiscing ornare nibh nunc, at hendrerit ac cursus velit. Nulla cursus porta donec cursus
+                        aliquam. Lobortis urna, eu, facilisi eget fusce facilisis egestas senectus at. Tincidunt nulla
+                        sed ut lectus arcu. Ante scelerisque aliquet enim viverra lobortis. Ipsum eu, in at nunc a
+                        consequat, in laoreet. Interdum a vestibulum, cursus nibh. Scelerisque sodales et dapibus
+                        vestibulum a volutpat. Nec suscipit orci sit condimentum non porttitor. Quisque aliquet justo
+                        placerat hac elit morbi tellus. Proin egestas amet egestas non turpis et purus in tellus. Mus
+                        ullamcorper cras facilisi turpis. Magna etiam viverra tellus parturient tempor ac non.
+                        Lectus hendrerit quis vitae non rhoncus. Pellentesque in aliquam faucibus maecenas sed tincidunt
+                        sociis elit massa. Mauris pellentesque etiam habitant ut. Quis nulla feugiat ac sit mauris
+                        condimentum. Tortor neque pharetra, dolor suspendisse in erat.
+                        Nisl enim, consequat eu eget pretium. Amet eget ut est augue sapien, a. Pharetra lectus augue
+                        aliquet cursus ut viverra bibendum odio turpis. Dictumst vitae cras ac elit.</p>
+
+                </div>
+            </div>
+            <div class="row mt-5 mb-4">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 text-center contentsection">
+                    <h2 class="mb-2">Benefits Of Employee</h2>
+                    <h5>Realigning the mind for greater innovation and greater experiences.</h5>
+                </div>
+                <div class="col-md-2"></div>
+
+            </div>
+            <div class="row Benefits">
+                <div class="col-md-6">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="p-2">
+                            <img src="./img/icons2.png" alt="">
+                        </div>
+
+                        <div class="p-2">
+                            <h5>Rewarding Salary</h5>
+                            <p>To get the best out of people, we try to pay them the best, by offering
+                                competitive salaries based on experience and skill set.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="p-2">
+                            <img src="./img/icons1.png" alt="">
+                        </div>
+
+                        <div class="p-2">
+                            <h5>Rewarding Salary</h5>
+                            <p>To get the best out of people, we try to pay them the best, by offering
+                                competitive salaries based on experience and skill set.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="p-2">
+                            <img src="./img/icons3.png" alt="">
+                        </div>
+
+                        <div class="p-2">
+                            <h5>Rewarding Salary</h5>
+                            <p>To get the best out of people, we try to pay them the best, by offering
+                                competitive salaries based on experience and skill set.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="p-2">
+                            <img src="./img/icons4.png" alt="">
+                        </div>
+
+                        <div class="p-2">
+                            <h5>Rewarding Salary</h5>
+                            <p>To get the best out of people, we try to pay them the best, by offering
+                                competitive salaries based on experience and skill set.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="p-2">
+                            <img src="./img/icons5.png" alt="">
+                        </div>
+
+                        <div class="p-2">
+                            <h5>Rewarding Salary</h5>
+                            <p>To get the best out of people, we try to pay them the best, by offering
+                                competitive salaries based on experience and skill set.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </section>
+    <section class="jobtabs mt-5">
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-12 ">
+                    <div class="d-flex justify-content-center">
+                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="pills-Vacancies-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-Vacancies" type="button" role="tab"
+                                    aria-controls="pills-Vacancies" aria-selected="true">All Vacancies</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-Design-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-Design" type="button" role="tab" aria-controls="pills-Design"
+                                    aria-selected="false">Design</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-Development-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-Development" type="button" role="tab"
+                                    aria-controls="pills-Development" aria-selected="false">Development</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-Marketing-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-Marketing" type="button" role="tab"
+                                    aria-controls="pills-Marketing" aria-selected="false">Marketing</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-Others-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-Others" type="button" role="tab" aria-controls="pills-Others"
+                                    aria-selected="false">Others</button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-Vacancies" role="tabpanel"
+                            aria-labelledby="pills-home-tab">
+                            <div class=" row job-preview align-items-center mb-3">
+                                <div class="col-md-8">
+                                    <div class="job-content">
+                                        <h5 class="mb-3"><a href="" target="_self|_blank"><span>AngularJS Developer</span></a></h5>
+                                        <p class="mb-3">We are looking to hire an experienced AngularJS Developer to join our
+                                            dynamic
+                                            team. Your role will require you to implement an exciting and
+                                            streamlined user
+                                            experience. To ensure success...</p>
+                                        <div class="job-additional-information mb-3">
+                                            <span class="subData">Date:<b>07/01/2021</b></span>
+                                            <br>
+                                            <span class="subData">Experience<b>3 Years</b></span>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-2 lineleftjob">
+
+                                </div>
+                                <div class="col-md-2 text-center">
+                                    <a class="APPLY" href="" target="_self|_blank" class="apply-btn local">APPLY NOW</a>
+                                </div>
+
+                            </div>
+                            <div class=" row job-preview align-items-center mb-3">
+                                <div class="col-md-8">
+                                    <div class="job-content">
+                                        <h5 class="mb-3"><a href="" target="_self|_blank"><span>AngularJS Developer</span></a></h5>
+                                        <p class="mb-3">We are looking to hire an experienced AngularJS Developer to join our
+                                            dynamic
+                                            team. Your role will require you to implement an exciting and
+                                            streamlined user
+                                            experience. To ensure success...</p>
+                                        <div class="job-additional-information mb-3">
+                                            <span class="subData">Date:<b>07/01/2021</b></span>
+                                            <br>
+                                            <span class="subData">Experience<b>3 Years</b></span>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-2 lineleftjob">
+
+                                </div>
+                                <div class="col-md-2 text-center">
+                                    <a class="APPLY" href="" target="_self|_blank" class="apply-btn local">APPLY NOW</a>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="pills-Design" role="tabpanel" aria-labelledby="pills-Design-tab">
+                            Design
+                        </div>
+                        <div class="tab-pane fade" id="pills-Development" role="tabpanel"
+                            aria-labelledby="pills-Development-tab">
+                            Development</div>
+                        <div class="tab-pane fade" id="pills-Marketing" role="tabpanel"
+                            aria-labelledby="pills-Marketing-tab">
+                            Marketing
+                        </div>
+                        <div class="tab-pane fade" id="pills-Others" role="tabpanel" aria-labelledby="pills-Others-tab">
+                            Others</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </section>
+
 
     <div class="footer pt-5">
         <div class="container ">
