--- a/Knowus.html
+++ b/Knowus.html
@@ -22,19 +22,19 @@
             <div class="container">
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
-                        <a aria-current="page" href="#">Know Us</a>
+                          <a aria-current="page" href="Knowus.html">Know Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Services</a>
+                        <a href="Services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">New Insights</a>
+                        <a href="insight.html">New Insights</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Chronicles</a>
+                        <a href="chronicles.html">Chronicles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="active" href="#">Careers</a>
+                        <a class="active" href="Careers.html">Careers</a>
                     </li>
 
                 </ul>
@@ -43,7 +43,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light navigation_bar">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./img/homelogo.png" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="./img/homelogo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -266,7 +266,7 @@
                     <h2 class="mb-2">Global Approach</h2>
                     <h1 class="mb-4">A Global Vision</h1>
                     <p>
-                        It is the ability of the organization to think beyond the boundaries that sets it apart from its contemporaries. Striving to compete with the best from the globe,  the organization has a truly ambitious vision. 
+                        It is the ability of the organization to think beyond the boundaries that sets it apart from its contemporaries. Striving to compete with the best from the globe, the organization has a truly ambitious vision. 
 
                         It is this global outlook that has triggered the remarkable progress that has clearly instilled awe and confidence in the minds of one and all. 
                         
