--- a/insight.html
+++ b/insight.html
@@ -22,19 +22,19 @@
             <div class="container">
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
-                        <a aria-current="page" href="#">Know Us</a>
+                          <a aria-current="page" href="Knowus.html">Know Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Services</a>
+                        <a href="Services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">New Insights</a>
+                        <a href="insight.html">New Insights</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">Chronicles</a>
+                        <a href="chronicles.html">Chronicles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="active" href="#">Careers</a>
+                        <a class="active" href="Careers.html">Careers</a>
                     </li>
 
                 </ul>
@@ -43,7 +43,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light navigation_bar">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="./img/homelogo.png" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="./img/homelogo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
